增加若干功能